--- a/StreamingTwitter/Resources/Info.plist
+++ b/StreamingTwitter/Resources/Info.plist
@@ -51,5 +51,16 @@
 		<key>MainAssembly</key>
 		<string></string>
 	</dict>
+	<key>Twitter</key>
+	<dict>
+		<key>Consumer Key</key>
+		<string>PZKQADuP0jFQzrmiEMdUqztGB</string>
+		<key>Consumer Secret</key>
+		<string>PiQkF0lGx3D4mT22QAe9U6AceVPSEGmcBPUyAKOXEosO7pOrsx</string>
+		<key>Access Token</key>
+		<string>779999595460001792-6IvC69Eug87J5boWpHLYQfoyaqGutaj</string>
+		<key>Access Token Secret</key>
+		<string>F5JZUnXqqcHDF4X0GXAxWeCGzsPcjIeLu84ZYFG7owlKz</string>
+	</dict>
 </dict>
 </plist>
